# Traffic_Emission_Haskell

./: Dockerfile  README.md  Traffic-Emission.cabal  analysis.json  transport-emissions.cabal  transport_data.csv  vehicles.csv
app/: Main.hs
cli/: CLI.hs  Menu.hs
scotty-web/: .gitignore  package.yaml  scotty-web.cabal
scotty-web/.stack-work/: stack.sqlite3
scotty-web/app/: Web.hs
scotty-web/scotty-web/: README.md  package.yaml  scotty-web.cabal
scotty-web/scotty-web/app/: Main.hs
scotty-web/scotty-web/static/: index.html
scotty-web/static/: analysis.json  dashboard.html  emissions_Africa.json  emissions_Antarctica.json  emissions_Asia.json  emissions_Australia.json  emissions_North_America.json  emissions_South_America.json  index.html
src/: Analysis.hs  CityAggregation.hs  DatasetLoader.hs  EmissionCalculator.hs  EmissionEngine.hs  EnergyEngine.hs  ModeAnalysis.hs  Models.hs  PolicyModel.hs  Preprocessing.hs  Ranking.hs  Sensitivity.hs  Simulation.hs  Statistics.hs  TrendAnalysis.hs  Types.hs  Utils.hs
