cabal-version: 2.2

name:           scotty-web
version:        0.1.0.0
description:    Please see the README on GitHub
homepage:       https://github.com/githubuser/scotty-web#readme
bug-reports:    https://github.com/githubuser/scotty-web/issues
author:         Kavin J S
maintainer:     kavinjs21@gmail.com
copyright:      2026 Kavin J S
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/githubuser/scotty-web

executable scotty-web-exe
  main-is: Web.hs
  other-modules:
      Paths_scotty_web
  autogen-modules:
      Paths_scotty_web
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , directory
    , scotty
    , warp
    , wai
    , text
  default-language: Haskell2010
